--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy==1.15.4
-sacred==0.7.3
-tensorflow-gpu==1.14.0
-librosa==0.6.2
+numpy==1.16.4
+sacred==0.7.5
+librosa==0.7.0
 soundfile==0.10.2
-lxml==4.2.1
+lxml==4.4.1
 musdb==0.2.3
-museval==0.2.0
+museval==0.3.0
 google==2.0.1
-protobuf==3.4.0
+protobuf==3.6.1
+pymongo==3.9.0
