modified:   Models/UnetAudioSeparator.py 	modified:   Training.py 	modified:   _musdb_/configs/mus_acc.yaml 	modified:   _musdb_/configs/mus_voc.yaml

--- a/_musdb_/configs/mus_acc.yaml
+++ b/_musdb_/configs/mus_acc.yaml
@@ -13,5 +13,7 @@ stem_ids:
 
 # Define output targets to be tested using linear mixtures
 targets:
+    vocals:
+        accompaniment: 1
     accompaniment:
         accompaniment: 1
